--- a/test/fixtures/parents.yml
+++ b/test/fixtures/parents.yml
@@ -3,11 +3,11 @@
 one:
   name: MyString
   email: MyString
-  password_digest_string: MyString
+  password_digest: MyString
   student_id: 1
 
 two:
   name: MyString
   email: MyString
-  password_digest_string: MyString
+  password_digest: MyString
   student_id: 1
